@@ -1,0 +1,63 @@
+/*
+ * Copyright (c) 2007, Marc Kramis
+ * 
+ * Permission to use, copy, modify, and/or distribute this software for any
+ * purpose with or without fee is hereby granted, provided that the above
+ * copyright notice and this permission notice appear in all copies.
+ * 
+ * THE SOFTWARE IS PROVIDED "AS IS" AND THE AUTHOR DISCLAIMS ALL WARRANTIES
+ * WITH REGARD TO THIS SOFTWARE INCLUDING ALL IMPLIED WARRANTIES OF
+ * MERCHANTABILITY AND FITNESS. IN NO EVENT SHALL THE AUTHOR BE LIABLE FOR
+ * ANY SPECIAL, DIRECT, INDIRECT, OR CONSEQUENTIAL DAMAGES OR ANY DAMAGES
+ * WHATSOEVER RESULTING FROM LOSS OF USE, DATA OR PROFITS, WHETHER IN AN
+ * ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
+ * OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
+ * 
+ * $Id$
+ */
+
+package org.treetank.xmllayer;
+
+import java.io.ByteArrayOutputStream;
+import java.io.File;
+
+import junit.framework.TestCase;
+
+import org.junit.Before;
+import org.junit.Test;
+import org.treetank.api.IReadTransaction;
+import org.treetank.api.ISession;
+import org.treetank.api.IWriteTransaction;
+import org.treetank.sessionlayer.Session;
+import org.treetank.utils.TestDocument;
+
+public class XMLSerializerTest {
+
+  public static final String PATH =
+      "generated" + File.separator + "XMLSerializerTest.tnk";
+
+  @Before
+  public void setUp() {
+    Session.removeSession(PATH);
+  }
+
+  @Test
+  public void testXMLSerializer() {
+    // Setup session.
+    final ISession session = Session.beginSession(PATH);
+    final IWriteTransaction wtx = session.beginWriteTransaction();
+    TestDocument.create(wtx);
+    wtx.commit();
+    wtx.close();
+
+    // Generate from this session.
+    final ByteArrayOutputStream out = new ByteArrayOutputStream();
+    final IReadTransaction rtx = session.beginReadTransaction();
+    final XMLSerializer serializer = new XMLSerializer(rtx, out);
+    serializer.run();
+    TestCase.assertEquals(TestDocument.XML, out.toString());
+    rtx.close();
+    session.close();
+  }
+
+}
